--- a/style.css
+++ b/style.css
@@ -208,7 +208,7 @@ body.dark-mode footer {
 #themeControls {
   display: flex;
   gap: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 #resetThemeBtn {
@@ -229,7 +229,7 @@ body.dark-mode footer {
   border: none;
   border-radius: var(--border-radius);
   cursor: pointer;
-  font-size: 10px;
+  font-size: 1.4rem;
 }
 
 #themeControls button:hover {
