--- a/style.css
+++ b/style.css
@@ -46,7 +46,8 @@ body {
 }
 
 h1,
-h2 {
+h2,
+h3 {
   letter-spacing: 0.5px;
   text-align: center;
 }
@@ -74,6 +75,13 @@ header p {
    Projects Section
 -------------------------------- */
 
+.projects {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+}
+
 .projects h2 {
   font-size: 2rem;
   margin-bottom: 10px;
@@ -84,7 +92,7 @@ header p {
 .project-card {
   background-color: var(--card-background-color);
   padding: 10px;
-  margin-bottom: 15px;
+  margin: 15px 0;
   border-radius: var(--border-radius);
   box-shadow: var(--shadow);
   transition: transform 0.2s ease;
@@ -103,19 +111,24 @@ header p {
 
 .project-card h3 {
   margin: 0 0 5px;
+  font-size: 1.8rem;
+}
+
+.project-card h4 {
+  margin: 0;
   font-size: 1.6rem;
 }
 
 .project-card p {
   font-size: 1.4rem;
-  margin-bottom: 8px;
+  margin: 5px 0 10px 0;
 }
 
 /* Links */
 
 .project-links a {
   display: inline-block;
-  margin-right: 10px;
+  margin-right: 20px;
   text-decoration: none;
   color: var(--accent-color);
   font-weight: bold;
@@ -272,6 +285,10 @@ body.dark-mode footer {
   }
 
   .project-card h3 {
+    font-size: 2rem;
+  }
+
+  .project-card h4 {
     font-size: 1.8rem;
   }
 
@@ -304,10 +321,18 @@ body.dark-mode footer {
   }
 
   .project-card h3 {
+    font-size: 2.2rem;
+  }
+
+  .project-card h4 {
     font-size: 2rem;
   }
 
   .project-card p {
     font-size: 1.8rem;
+  }
+
+  footer {
+    font-size: 1.4rem;
   }
 }
